# 9s

./: .gitignore  Cargo.toml
lib/bot-macros/: Cargo.toml
lib/bot-macros/src/: lib.rs
lib/bot-utils/: Cargo.toml
lib/bot-utils/src/: lib.rs
lib/fluent-macros/: Cargo.toml
lib/fluent-macros/src/: lib.rs  lib_draft1.rs
locales/en-UK/: main.ftl
src/: climate.rs  main.rs
src/commands/: climate.rs  general.rs  mod.rs
src/localization/: mod.rs
src/localization/languages/: de.ftl
src/localization/locales/de/: main.ftl
src/localization/locales/en-UK/: main.ftl
src/sources/: climate_forecast.rs  climate_historical.rs  common.rs  geo_time.rs  geocoding.rs  mod.rs  nominatim.rs  types.rs
src/utils/: parsing.rs
