[package]
name = "DiscordBot9S"
version = "0.2.1"
edition = "2021"
rust-version = "1.80"

[dependencies]
bot-macros = { path = "./lib/bot-macros" }
bot-utils = { path = "./lib/bot-utils" }
fluent-macros = { path = "./lib/fluent-macros" }

poise = "0.6"
reqwest = { version = "0.12", features = ["json"] }
serde = "1.0"
tokio = { version = "1.42.0", features = ["full"] }
serde_json = "1.0"
fluent-bundle = "^0.15"
fluent-templates = "^0.13"
thiserror = "2.0"
url = "2.5"
log = "0.4.22"
env_logger = "0.11.6"
cached = { version = "0.54.0", features = ["async"] }
lazy_static = "1.5.0"